# avxsynth

./: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.old  README.md  avxsynth.pc.in  avxutils.pc.in  common.mk  config.guess  config.sub  configure  configure.ac  configure.old  index.html  mpdemux_avx.patch  mplconfig  params.json
apps/AVXEdit/: Makefile  Makefile.32bits.old  Makefile.64bits.old  Makefile.am  Makefile.in  Makefile.old  Makefile~  README  application.pro  application.qrc
apps/AVXEdit/src/: main.cpp  mainwindow.cpp  mainwindow.h
apps/avxframeserver/: Makefile.am  Makefile.in
apps/avxframeserver/frameserverapp/: Makefile  Makefile.old  Makefile~
apps/avxframeserver/frameserverlib/: Makefile
avxsynth/: Makefile.am  Makefile.in
avxsynth/builtinfunctions/: Makefile  Makefile.old  Makefile~  builtInFunctionsExportDefinitions.h
avxsynth/builtinfunctions/src/: AllBuiltInPlugins.h  AllBuiltInPluginsEntryPoint.cpp
avxsynth/common/include/: internal.h  stdafx.h
avxsynth/core/: Makefile  Makefile.old  Makefile~
avxsynth/core/src/: resource.h  windowsPorts.cpp  windowsPorts.h
avxutils/: Makefile  Makefile.am  Makefile.in
avxutils/src/: AvxTextRender.cpp  Path.cpp  avxlog.cpp
include/: Makefile.am  Makefile.in  avxiface.h  avxlog.h  avxplugin.h
include/common/windowsPorts/: MMRegLinux.h  VfwLinux.h  WinBaseLinux.h  basicDataTypeConversions.h  windows2linux.h
include/utils/: AvxException.h  AvxString.h  AvxTextRender.h  Size.h  TextConfig.h
include/windowsPorts/: UnknwnLinux.h  WinDefLinux.h  WinGDILinux.h  basicDataTypeConversions.h  windows2linux.h
plugins/autocrop/: AutoCrop.txt  Makefile  Makefile.am  Makefile.in  Makefile~
plugins/autocrop/src/: autocrop.cpp  info.h  infoYV12.h
plugins/avxffms2/: Makefile  Makefile.am  Makefile.in  Makefile.old  Makefile~
plugins/avxffms2/src/: avisynth.cpp  avssources.cpp  avssources.h  avssources_avx.cpp  avssources_avx.h  avsutils.cpp  avsutils.h  avsutils_avx.cpp  avsutils_avx.h  avxffms2.cpp  ffpp_avx.cpp  ffpp_avx.h  ffswscale.cpp  ffswscale.h  ffswscale_avx.cpp  ffswscale_avx.h  videoutils.cpp  videoutils.h
plugins/avxframecapture/: Makefile  Makefile.am  Makefile.in  Makefile.old  Makefile~
plugins/avxframecapture/src/: AvxFrameCapture.cpp  AvxFrameCapture.h  ClipProxy.h  FrameCaptureProfile.cpp  FrameCaptureProfile.h  FrameRenderer.cpp  FrameRenderer.h
plugins/avxsubtitle/: Makefile  Makefile.am  Makefile.in  Makefile.old  Makefile~
plugins/avxsubtitle/src/: AvxSubtitle.cpp  AvxSubtitle.h  CaptionEntry.cpp  CaptionEntry.h  CaptionList.cpp  CaptionList.h  SrtParser.cpp  SrtParser.h  SubtitleParser.cpp  SubtitleParser.h  Utils.cpp  Utils.h
scripts/: AvxFrameServer.py  AvxTestCommon.py  AvxTestSuite-SANITY.test  AvxTestSuite-audio.test  AvxTestSuite-colors.test  AvxTestSuite-colorspaces.test  AvxTestSuite-conditional.test  AvxTestSuite-field.test  AvxTestSuite-focus.test  AvxTestSuite-textrender.test  AvxTestSuite-timeline.test  AvxUnitTest.py  Makefile.am  Makefile.in  blurVideo.avs  common.avsi.in  destinationColor.avs  destinationConvertToYV12.avs  destinationGreyscale.avs  destinationLayer.avs  destinationLevels.avs  destinationScaled.avs  destinationSwap.avs  destinationTrimLoop.avs  elephantCropTrimSubtitle.avs  env.sh  exception.avs  loadplugin.avs  setworkingdir.avs  stackVideo.avs  testScript_audio.avs  testScript_resampleAudio.avs  testScript_stereoMerge.avs  writeYDiffFromPrev.avs
scripts/api_test/: avs_c_interface.c  invoke_positional_args.c  multiple_script_env.cpp
scripts/audio/: alignedsplice.avs  amplifydb.avs  assumesamplerate.avs  audiodub_ex_video.avs  converttomono.avs  loop_audio.avs  resampleaudio.avs
scripts/colors/: coloryuv.avs  levels_yuv.avs  rgbadjust.avs  tweak.avs
scripts/colorspaces/: convertbacktoyuy2.avs  converttoyuy2.avs  grayscale.avs
scripts/conditional/: conditionalreader-bool.txt  conditionalreader-int.txt
scripts/examples/: destinationConvertToRGB24.avs  destinationCrop.avs  destinationFocus.avs  destinationResize.avs  destinationTurn.avs  elephantTrim.avs  messageClip.avs  stackVideoBlur.avs  testScript_audioConversions.avs  testScript_monoToStereo.avs
scripts/field/: assumefieldbased_framebased.avs  assumetff_bff_weave_complementparity.avs  pulldown.avs  separatefields.avs
scripts/filewriting/: compare-RGB24.avs  compare-YUY2.avs
scripts/focus/: blur_sharpen.avs
scripts/frameaverage/: merge_rgb.avs  subtract_rgb.avs
scripts/geometry/: crop_cropbottom_addborders_letterbox.avs  reduceby2.avs  stackhorizontal_vertical_showfive.avs  turnleft_right_180.avs
scripts/planeswap/: mergechroma_luma.avs  utoy_vtoy_ytouv.avs
scripts/regression/: test-stack.avs  test-writeYdiff.avs
scripts/scriptfunctions/: clip.sh  math.sh
scripts/test/: AvxFrameServer.py  AvxTestCommon.py  AvxTestSuite-A.txt  AvxTestSuite-V.txt  AvxTestSuite.txt  AvxUnitTest.py  Makefile  README.txt  alignedsplice.avs  animate.avs  applyrange.avs  assumefieldbased_framebased.avs  assumefps_changefps.avs  assumesamplerate.avs  assumetff_bff_weave_complementparity.avs  audiodub_ex.avs  audiodub_ex_audio.avs  blur_sharpen.avs  coloryuv.avs  compare-RGB24.avs  compare-RGB32.avs  compare-YUY2.avs  compare-YV12.avs  conditionalfilter.avs  conditionalreader-float.txt  conditionalreader-int.txt  conditionalreader.avs  convertbacktoyuy2.avs  convertfps.avs  converttomono.avs  converttorgb24.avs  converttorgb32.avs  converttoyuy2.avs  converttoyv12.avs  crop_cropbottom_addborders_letterbox.avs  dissolve.avs  dissolve_audio.avs  dissolve_video.avs  doubleweave.avs  fade_in_out_io_0_2.avs  (+39 more)
scripts/test/.svn/: all-wcprops  entries
scripts/test/testApp/: main.c
scripts/test/testclips/: RGB-test-pattern.avi  RGB-test-pattern.avi.ffindex  compare-RGB24-as-YV12.avi.ffindex  (+5 more)
scripts/testclips/: compare-RGB24-as-YV12.avi
scripts/textrender/: messageclip.avs
scripts/timeline/: animate.avs  fade_in_out_io_0_2_video.avs  selectevery_even_odd_rangeevery.avs  trim_freeze_delete_duplicateframe.avs
scripts/tools/: avsgrabber.cpp  dummy_plugin.cpp  dummy_plugin2.cpp
(+201 files in other folders)
